# WaveShare-RP2040-1.28-LCD-LVGL-Coil_counter_Pub

./: .gitignore  LICENSE  README.md  platformio.ini
include/: User_Setup.h  lv_conf.h
lib/TFT_eSPI/: User_Setup_Select.h
lib/TFT_eSPI/User_Setups/: Setup200_GC9A01.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lib/ui/src/fonts/: ui_font_FontHighL1.c  ui_font_FontHighL2.c
lib/ui/src/images/: oshw_logo.c  ui_img_1120861132.c  ui_img_1124193684.c  ui_img_1366475832.c  ui_img_150891397.c  ui_img_446092942.c
lib/ui/src/screens/: ui_Screen1.c  ui_Screen2.c
src/: control.cpp  control.h  display.cpp  display.h  encoders.cpp  encoders.h  main.cpp  main.h
